--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ p {
   display: flex;
 }
 
+.no-margin{
+  margin: 0;
+}
+
 .filler::before {
   display: none;
 }
@@ -58,6 +62,18 @@ a.hover-link::before {
 
 a.hover-link:hover::before {
   width: 40%;
+}
+
+.highlight-header .services {
+  font-size: .75em;
+  text-align: center;
+  margin-top: -15px;
+  margin-bottom: 25px;
+}
+
+.highlight-header .services span {
+  font-weight: bold;
+  font-style: italic;
 }
 
 .pink::before, .pink-back {
@@ -117,6 +133,13 @@ nav a {
   color: #ea6045;
 }
 
+nav p {
+  text-align: left;
+  font-size: .9em;
+  margin-left: 25%;
+  letter-spacing: .05em;
+}
+
 #main-page {
   width: 90%;
   float: right;
@@ -151,11 +174,13 @@ nav a {
   text-align: left;
 }
 
-#head-info .btn {
+#head-info .btn,
+.highlight-page .btn {
   background: #ea6045;
 }
 
-#head-info .btn:hover {
+#head-info .btn:hover,
+.highlight-page .btn:hover {
   background: #dd4a2d;
 }
 
@@ -549,6 +574,10 @@ nav a {
 
     nav a {
       z-index: 10;
+    }
+
+    nav p {
+      display: none;
     }
 
     #logo {
