--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
   overflow-x: hidden;
+  width: 100%;
 }
 
 h1 {
@@ -138,6 +139,7 @@ nav p {
   font-size: .9em;
   margin-left: 25%;
   letter-spacing: .05em;
+  font-weight: bold;
 }
 
 #main-page {
