--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
-  overflow-x: hidden;
-  width: 100%;
+  overflow: hidden;
+  /*width: 100%;*/
 }
 
 h1 {
