--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,7 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
-  overflow: hidden;
-  /*width: 100%;*/
+  width: 100%;
 }
 
 h1 {
@@ -285,9 +284,9 @@ nav p {
   width: 80%;
   max-width: 1100px;
   margin: auto;
-  padding: 40px;
+  padding: 0;
+  padding-top: 40px;
   color: #2f3440;
-  padding-bottom: 0;
   margin-bottom: -20px;
 }
 
@@ -471,7 +470,7 @@ nav p {
   }
 
   #head-info {
-    width: 70%;
+    width: 80%;
   }
 
   .highlight-header {
@@ -682,6 +681,10 @@ nav p {
 
     nav ul a:hover {
       text-decoration: underline;
+    }
+
+    #pages-container img.device {
+      margin: 20px 0;
     }
 
     /* CHANGING FOOTER */
